# DMM

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/desk-category/: Cargo.toml  build.rs
src-tauri/crates/desk-category/permissions/: default.toml
src-tauri/crates/desk-category/permissions/autogenerated/: reference.md
src-tauri/crates/desk-category/permissions/autogenerated/commands/: create_category.toml  delete_category.toml  get_categories.toml  link_folder.toml  reorder_categories.toml  unlink_folder.toml  update_category.toml
src-tauri/crates/desk-category/permissions/schemas/: schema.json
src-tauri/crates/desk-category/src/: lib.rs
src-tauri/crates/desk-core/: Cargo.toml
src-tauri/crates/desk-core/src/: error.rs  lib.rs
src-tauri/crates/desk-core/src/config/: app_config.rs  mod.rs
src-tauri/crates/desk-core/src/db/: connection.rs  migration_aggregator.rs  migrations.rs  mod.rs  path_resolver.rs  repos.rs  schema_inspector.rs
src-tauri/crates/desk-core/src/domain/: category.rs  item.rs  mod.rs  scanned_app.rs  search.rs
src-tauri/crates/desk-icon/: Cargo.toml  build.rs
src-tauri/crates/desk-icon/permissions/: default.toml
src-tauri/crates/desk-icon/permissions/autogenerated/: reference.md
src-tauri/crates/desk-icon/permissions/autogenerated/commands/: extract_icon_for_item.toml  get_item_icon_base64.toml
src-tauri/crates/desk-icon/permissions/schemas/: schema.json
src-tauri/crates/desk-icon/src/: lib.rs
src-tauri/crates/desk-item/: Cargo.toml  build.rs
src-tauri/crates/desk-item/permissions/: default.toml
src-tauri/crates/desk-item/permissions/autogenerated/: reference.md
src-tauri/crates/desk-item/permissions/autogenerated/commands/: batch_delete_items.toml  create_item.toml  delete_item.toml  get_items_by_category.toml  launch_item.toml  move_item.toml  reorder_items.toml  toggle_pin_item.toml  update_item.toml
src-tauri/crates/desk-item/permissions/schemas/: schema.json
src-tauri/crates/desk-item/src/: lib.rs
src-tauri/crates/desk-scan/: Cargo.toml  build.rs
src-tauri/crates/desk-scan/permissions/: default.toml
src-tauri/crates/desk-scan/permissions/autogenerated/: reference.md
src-tauri/crates/desk-scan/permissions/autogenerated/commands/: auto_scan_on_start.toml  import_scanned_apps.toml  scan_folder.toml  scan_start_menu.toml  scan_uwp_apps.toml
src-tauri/crates/desk-scan/permissions/schemas/: schema.json
src-tauri/crates/desk-scan/src/: lib.rs  migrations.rs
src-tauri/crates/desk-search/: Cargo.toml  build.rs
src-tauri/crates/desk-search/permissions/: default.toml
src-tauri/crates/desk-search/permissions/autogenerated/: reference.md
src-tauri/crates/desk-search/permissions/autogenerated/commands/: search_items.toml
src-tauri/crates/desk-search/permissions/schemas/: schema.json
src-tauri/crates/desk-search/src/: lib.rs
src-tauri/crates/desk-settings/: Cargo.toml  build.rs
src-tauri/crates/desk-settings/permissions/: default.toml
src-tauri/crates/desk-settings/permissions/autogenerated/: reference.md
src-tauri/crates/desk-settings/permissions/autogenerated/commands/: delete_custom_theme.toml  get_system_accent_color.toml  list_custom_themes.toml  load_settings.toml  save_custom_theme.toml  save_window_position.toml  update_settings.toml
src-tauri/crates/desk-settings/permissions/schemas/: schema.json
src-tauri/crates/desk-settings/src/: lib.rs
src-tauri/crates/desk-web/: Cargo.toml  build.rs
src-tauri/crates/desk-web/permissions/: default.toml
src-tauri/crates/desk-web/permissions/autogenerated/: reference.md
src-tauri/crates/desk-web/permissions/autogenerated/commands/: fetch_web_meta.toml
src-tauri/crates/desk-web/permissions/schemas/: schema.json
src-tauri/crates/desk-web/src/: lib.rs  migrations.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__initial_schema.sql
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/commands/: category.rs  item.rs  mod.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/db/: connection.rs  migration.rs  mod.rs  models.rs
src-tauri/src/services/: category_service.rs  item_service.rs  mod.rs
src/assets/styles/: tokens.css  variables.css
src/components/category/: CategoryEditDialog.vue  CategoryItem.vue
src/components/common/: AppIcon.vue  CloseConfirmDialog.vue  ConfirmDialog.vue  ContextMenu.vue  Dialog.vue  Toast.vue
src/components/item/: ItemCard.vue  ItemEditDialog.vue  ScanDialog.vue
src/components/layout/: ContentArea.vue  Sidebar.vue  TitleBar.vue
src/components/search/: SearchOverlay.vue
src/components/settings/: ColorPicker.vue  SettingButtonGroup.vue  SettingRow.vue  SettingSlider.vue  SettingToggle.vue  ShortcutRecorder.vue  ThemeEditor.vue  ThemeSelector.vue
src/composables/: useI18n.ts  useSortable.ts  useTauriCommand.ts  useTheme.ts  useWindowClose.ts
src/pages/main/: MainView.vue  MainWindow.vue
src/pages/search/: SearchWindow.vue
src/pages/settings/: SettingsView.vue  SettingsWindow.vue
src/pages/settings/sections/: AboutSection.vue  AppearanceSection.vue  ScanSection.vue  ShortcutSection.vue
src/router/: index.ts
src/stores/: category.ts  item.ts  scan.ts  search.ts  settings.ts  theme.ts  toast.ts  ui.ts
src/themes/: builtin.ts
src/types/: category.ts  item.ts  search.ts  theme.ts
src/utils/: color.ts  icons.ts
