[package]
name = "desk-core"
version.workspace = true
edition.workspace = true

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
refinery = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
