[package]
name = "desk-item"
version.workspace = true
edition.workspace = true
links = "desk-item"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
desk-core = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
pinyin = { workspace = true }
open = { workspace = true }
tracing = { workspace = true }
