[package]
name = "desk-search"
version.workspace = true
edition.workspace = true
links = "desk-search"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
desk-core = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
fuzzy-matcher = { workspace = true }
