[package]
name = "desk-settings"
version.workspace = true
edition.workspace = true
links = "desk-settings"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
desk-core = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-registry = "0.5"
